[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "async-scraper"
version = "0.1.0"
description = "Simple async HTML scraper with aiohttp and BeautifulSoup"
authors = [
    {name = "yessaimon"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12"
]


[project.urls]
Homepage = "https://github.com/yessaimon/async-scraper"
Repository = "https://github.com/yessaimon/async-scraper"
